fix: sh